docs/api/qiskit/0.35/qiskit.visualization.pulse_v2.IQXSimple.mdx
---
title: IQXSimple (v0.35)
description: API reference for qiskit.visualization.pulse_v2.IQXSimple in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.visualization.pulse_v2.IQXSimple
---

# IQXSimple

<Class id="qiskit.visualization.pulse_v2.IQXSimple" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/visualization/pulse_v2/stylesheet.py" signature="IQXSimple(**kwargs)" modifiers="class">
  Bases: `dict`

  Simple pulse stylesheet without channel notation.

  *   Generate stepwise waveform envelope with latex pulse names.
  *   Apply phase modulation to waveforms.
  *   Do not show frame changes.
  *   Show chart name.
  *   Do not show snapshot and barrier.
  *   Do not show acquire channels.
  *   Channels are sorted by qubit index.

  ## Methods

  <span id="qiskit-visualization-pulse-v2-iqxsimple-clear" />

  ### clear

  <Function id="qiskit.visualization.pulse_v2.IQXSimple.clear" signature="IQXSimple.clear() → None. Remove all items from D." />

  <span id="qiskit-visualization-pulse-v2-iqxsimple-copy" />

  ### copy

  <Function id="qiskit.visualization.pulse_v2.IQXSimple.copy" signature="IQXSimple.copy() → a shallow copy of D" />

  <span id="qiskit-visualization-pulse-v2-iqxsimple-fromkeys" />

  ### fromkeys

  <Function id="qiskit.visualization.pulse_v2.IQXSimple.fromkeys" signature="IQXSimple.fromkeys(value=None, /)">
    Create a new dictionary with keys from iterable and values set to value.
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxsimple-get" />

  ### get

  <Function id="qiskit.visualization.pulse_v2.IQXSimple.get" signature="IQXSimple.get(key, default=None, /)">
    Return the value for key if key is in the dictionary, else default.
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxsimple-items" />

  ### items

  <Function id="qiskit.visualization.pulse_v2.IQXSimple.items" signature="IQXSimple.items() → a set-like object providing a view on D’s items" />

  <span id="qiskit-visualization-pulse-v2-iqxsimple-keys" />

  ### keys

  <Function id="qiskit.visualization.pulse_v2.IQXSimple.keys" signature="IQXSimple.keys() → a set-like object providing a view on D’s keys" />

  <span id="qiskit-visualization-pulse-v2-iqxsimple-pop" />

  ### pop

  <Function id="qiskit.visualization.pulse_v2.IQXSimple.pop" signature="IQXSimple.pop(k[, d]) → v, remove specified key and return the corresponding value.">
    If key is not found, d is returned if given, otherwise KeyError is raised
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxsimple-popitem" />

  ### popitem

  <Function id="qiskit.visualization.pulse_v2.IQXSimple.popitem" signature="IQXSimple.popitem()">
    Remove and return a (key, value) pair as a 2-tuple.

    Pairs are returned in LIFO (last-in, first-out) order. Raises KeyError if the dict is empty.
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxsimple-setdefault" />

  ### setdefault

  <Function id="qiskit.visualization.pulse_v2.IQXSimple.setdefault" signature="IQXSimple.setdefault(key, default=None, /)">
    Insert key with a value of default if key is not in the dictionary.

    Return the value for key if key is in the dictionary, else default.
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxsimple-update" />

  ### update

  <Function id="qiskit.visualization.pulse_v2.IQXSimple.update" signature="IQXSimple.update([E, ]**F) → None. Update D from dict/iterable E and F.">
    If E is present and has a .keys() method, then does: for k in E: D\[k] = E\[k] If E is present and lacks a .keys() method, then does: for k, v in E: D\[k] = v In either case, this is followed by: for k in F: D\[k] = F\[k]
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxsimple-values" />

  ### values

  <Function id="qiskit.visualization.pulse_v2.IQXSimple.values" signature="IQXSimple.values() → an object providing a view on D’s values" />
</Class>

